force-app/main/default/objects/Strategy_Memo__c/Strategy_Memo__c.object-meta.xml
<CustomObject>
    <label>Strategy Memo</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Strategy Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>