force-app/main/default/objects/Strategy_Memo__c/fields/Acs__c.field-meta.xml
<CustomField>
    <fullName>Acs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>