force-app/main/default/objects/Strategy_Memo__c/fields/Actuarial_DRGs_ETGs_Claim_Repricing__c.field-meta.xml
<CustomField>
    <fullName>Actuarial_DRGs_ETGs_Claim_Repricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actuarial (DRGs/ETGs/Claim Repricing)</label>
    <type>Checkbox</type>
</CustomField>