force-app/main/default/objects/Strategy_Memo__c/fields/Actuarial_Support__c.field-meta.xml
<CustomField>
    <fullName>Actuarial_Support__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actuarial Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>