force-app/main/default/objects/Strategy_Memo__c/fields/Additional_Levers_AI_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Levers_AI_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Levers AI 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>