force-app/main/default/objects/Strategy_Memo__c/fields/Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Advocacy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>