force-app/main/default/objects/Strategy_Memo__c/fields/Aggregator_involved_in_the_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_involved_in_the_opportunity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aggregator involved in the opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>