force-app/main/default/objects/Strategy_Memo__c/fields/All_Optum_Pricing_Due_to_NPS_and_Sales__c.field-meta.xml
<CustomField>
    <fullName>All_Optum_Pricing_Due_to_NPS_and_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Optum Pricing Due to NPS and Sales</label>
    <type>Date</type>
</CustomField>