force-app/main/default/objects/Strategy_Memo__c/fields/AMT_Names_Requested__c.field-meta.xml
<CustomField>
    <fullName>AMT_Names_Requested__c</fullName>
    <label>AMT Names Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCE</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>IPM</fullName>
            </value>
            <value>
                <fullName>Exec Sponsor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>