force-app/main/default/objects/Strategy_Memo__c/fields/Anticipated_Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Actual_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated/Actual Close Date</label>
    <type>Date</type>
</CustomField>