force-app/main/default/objects/Strategy_Memo__c/fields/Any_Non_Standard_PGs__c.field-meta.xml
<CustomField>
    <fullName>Any_Non_Standard_PGs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Any Non-Standard PGs</label>
    <type>TextArea</type>
</CustomField>