force-app/main/default/objects/Strategy_Memo__c/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>