force-app/main/default/objects/Strategy_Memo__c/fields/Approach_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Approach_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approach Strategy</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>