force-app/main/default/objects/Strategy_Memo__c/fields/ASO__c.field-meta.xml
<CustomField>
    <fullName>ASO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASO</label>
    <type>Checkbox</type>
</CustomField>