force-app/main/default/objects/Strategy_Memo__c/fields/Atlanta__c.field-meta.xml
<CustomField>
    <fullName>Atlanta__c</fullName>
    <label>Atlanta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>call</fullName>
            </value>
            <value>
                <fullName>claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>