force-app/main/default/objects/Strategy_Memo__c/fields/Banking_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Banking_Arrangement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Banking Arrangement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>