force-app/main/default/objects/Strategy_Memo__c/fields/Behavioural_Solutions_Lead__c.field-meta.xml
<CustomField>
    <fullName>Behavioural_Solutions_Lead__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Behavioural Solutions Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>