force-app/main/default/objects/Strategy_Memo__c/fields/Benefits_Strategist_Surest__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Strategist_Surest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits Strategist - Surest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>