force-app/main/default/objects/Strategy_Memo__c/fields/Bid_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Bid_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bid Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>