force-app/main/default/objects/Strategy_Memo__c/fields/Bidder_s_Conference_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Bidder_s_Conference_Call_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Call Date</label>
    <type>Date</type>
</CustomField>