force-app/main/default/objects/Strategy_Memo__c/fields/Bidding_Blue_Plans__c.field-meta.xml
<CustomField>
    <fullName>Bidding_Blue_Plans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bidding Blue Plans</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>