force-app/main/default/objects/Strategy_Memo__c/fields/Business_Overview__c.field-meta.xml
<CustomField>
    <fullName>Business_Overview__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Comments/Company Background</label>
    <length>16325</length>
    <type>LongTextArea</type>
</CustomField>