force-app/main/default/objects/Strategy_Memo__c/fields/Business_Pressures__c.field-meta.xml
<CustomField>
    <fullName>Business_Pressures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Pressures</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>