force-app/main/default/objects/Strategy_Memo__c/fields/Business_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Business_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Strategy</label>
    <type>Checkbox</type>
</CustomField>