force-app/main/default/objects/Strategy_Memo__c/fields/C3_SNI__c.field-meta.xml
<CustomField>
    <fullName>C3_SNI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C3/SNI</label>
    <type>Checkbox</type>
</CustomField>