force-app/main/default/objects/Strategy_Memo__c/fields/Call_Site__c.field-meta.xml
<CustomField>
    <fullName>Call_Site__c</fullName>
    <label>Call Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Buffalo</fullName>
            </value>
            <value>
                <fullName>Chico</fullName>
            </value>
            <value>
                <fullName>GreensboroRaleigh</fullName>
            </value>
            <value>
                <fullName>GreenBayDuluthMinnetonka</fullName>
            </value>
            <value>
                <fullName>Kingston</fullName>
            </value>
            <value>
                <fullName>Richardson</fullName>
            </value>
            <value>
                <fullName>SanAntonioSugarLand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>