force-app/main/default/objects/Strategy_Memo__c/fields/CDHP__c.field-meta.xml
<CustomField>
    <fullName>CDHP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDHP</label>
    <type>Checkbox</type>
</CustomField>