force-app/main/default/objects/Strategy_Memo__c/fields/Census_Data__c.field-meta.xml
<CustomField>
    <fullName>Census_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Census Data</label>
    <type>Checkbox</type>
</CustomField>