force-app/main/default/objects/Strategy_Memo__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Buffalo</fullName>
            </value>
            <value>
                <fullName>Chico</fullName>
            </value>
            <value>
                <fullName>GreensboroRaleigh</fullName>
            </value>
            <value>
                <fullName>GreenBayDuluthMinnetonka</fullName>
            </value>
            <value>
                <fullName>Kingston</fullName>
            </value>
            <value>
                <fullName>Richardson</fullName>
            </value>
            <value>
                <fullName>SanAntonioSugarLand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multipicklist</fullName>
                <isActive>false</isActive>
                <label>Multipicklist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>