force-app/main/default/objects/Strategy_Memo__c/fields/Claim_Fiduciary__c.field-meta.xml
<CustomField>
    <fullName>Claim_Fiduciary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Fiduciary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>