force-app/main/default/objects/Strategy_Memo__c/fields/Claim_Trend_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Claim_Trend_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Target Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>