force-app/main/default/objects/Strategy_Memo__c/fields/Client_Dev_Director__c.field-meta.xml
<CustomField>
    <fullName>Client_Dev_Director__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Dev Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>