force-app/main/default/objects/Strategy_Memo__c/fields/Client_Manager_Surest__c.field-meta.xml
<CustomField>
    <fullName>Client_Manager_Surest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Manager  Surest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>