force-app/main/default/objects/Strategy_Memo__c/fields/Client_Manager_Traditional__c.field-meta.xml
<CustomField>
    <fullName>Client_Manager_Traditional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Manager  Traditional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>