force-app/main/default/objects/Strategy_Memo__c/fields/Client_Specific_Bid_Forms__c.field-meta.xml
<CustomField>
    <fullName>Client_Specific_Bid_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client-Specific Bid Forms</label>
    <type>Checkbox</type>
</CustomField>