force-app/main/default/objects/Strategy_Memo__c/fields/Clinical__c.field-meta.xml
<CustomField>
    <fullName>Clinical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>