force-app/main/default/objects/Strategy_Memo__c/fields/Clinical_Integration__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Integration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>