force-app/main/default/objects/Strategy_Memo__c/fields/Communication_Credit__c.field-meta.xml
<CustomField>
    <fullName>Communication_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>