force-app/main/default/objects/Strategy_Memo__c/fields/COMP_QD__c.field-meta.xml
<CustomField>
    <fullName>COMP_QD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COMP QD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>