force-app/main/default/objects/Strategy_Memo__c/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>