force-app/main/default/objects/Strategy_Memo__c/fields/Company_Name_as_per_RFP__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_as_per_RFP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name as per RFP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>