force-app/main/default/objects/Strategy_Memo__c/fields/Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Company_Overview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Overview</label>
    <type>Checkbox</type>
</CustomField>