force-app/main/default/objects/Strategy_Memo__c/fields/Confirm_Dates_for_Finalist_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Dates_for_Finalist_Kick_Off__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm Dates for Finalist &amp; Kick-Off</label>
    <type>TextArea</type>
</CustomField>