force-app/main/default/objects/Strategy_Memo__c/fields/Consultant_Address__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>