force-app/main/default/objects/Strategy_Memo__c/fields/Consultant_Commission__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Commission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Commission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>