force-app/main/default/objects/Strategy_Memo__c/fields/Consultant_Firm_Loc__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Firm_Loc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Firm-Loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>