force-app/main/default/objects/Strategy_Memo__c/fields/Contract_Legal_Review_Red_lined_review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Legal_Review_Red_lined_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract/Legal Review (Red-lined review?</label>
    <type>Checkbox</type>
</CustomField>