force-app/main/default/objects/Strategy_Memo__c/fields/Contribution_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contribution Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>