force-app/main/default/objects/Strategy_Memo__c/fields/Coveted_Account_SVP__c.field-meta.xml
<CustomField>
    <fullName>Coveted_Account_SVP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QUAD4 Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>