force-app/main/default/objects/Strategy_Memo__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credits</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>