force-app/main/default/objects/Strategy_Memo__c/fields/Current_Contract_ASA__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_ASA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Contract/ASA</label>
    <type>Checkbox</type>
</CustomField>