force-app/main/default/objects/Strategy_Memo__c/fields/Current_Plan_Design_s__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan_Design_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Plan Design(s)</label>
    <type>Checkbox</type>
</CustomField>