force-app/main/default/objects/Strategy_Memo__c/fields/Currently_in_an_ACO__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_an_ACO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently in an ACO</label>
    <type>Checkbox</type>
</CustomField>