force-app/main/default/objects/Strategy_Memo__c/fields/Customer_Service_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Service Model</label>
    <type>Checkbox</type>
</CustomField>