force-app/main/default/objects/Strategy_Memo__c/fields/CVG_Association__c.field-meta.xml
<CustomField>
    <fullName>CVG_Association__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CVG Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>