force-app/main/default/objects/Strategy_Memo__c/fields/DEI__c.field-meta.xml
<CustomField>
    <fullName>DEI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DEI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>