force-app/main/default/objects/Strategy_Memo__c/fields/Discussion_Points__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Points__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discussion Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>