force-app/main/default/objects/Strategy_Memo__c/fields/Disruption_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disruption Analysis</label>
    <type>Checkbox</type>
</CustomField>