force-app/main/default/objects/Strategy_Memo__c/fields/Disruption_Analysis_text__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Analysis_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disruption Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>