force-app/main/default/objects/Strategy_Memo__c/fields/Disruption_File__c.field-meta.xml
<CustomField>
    <fullName>Disruption_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disruption File</label>
    <type>Checkbox</type>
</CustomField>