force-app/main/default/objects/Strategy_Memo__c/fields/Disruption_File_Data_Included__c.field-meta.xml
<CustomField>
    <fullName>Disruption_File_Data_Included__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disruption File - Data Included</label>
    <length>255</length>
    <type>Text</type>
</CustomField>