force-app/main/default/objects/Strategy_Memo__c/fields/Disruption_File_Data_to_Follow__c.field-meta.xml
<CustomField>
    <fullName>Disruption_File_Data_to_Follow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disruption File - Data to Follow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>