force-app/main/default/objects/Strategy_Memo__c/fields/DIVERSITY_EQUITY_and_INCLUSION_DEI__c.field-meta.xml
<CustomField>
    <fullName>DIVERSITY_EQUITY_and_INCLUSION_DEI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DIVERSITY, EQUITY and INCLUSION (DEI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>