force-app/main/default/objects/Strategy_Memo__c/fields/Draft_Due_from_NPS__c.field-meta.xml
<CustomField>
    <fullName>Draft_Due_from_NPS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Draft Due from NPS</label>
    <type>Date</type>
</CustomField>