force-app/main/default/objects/Strategy_Memo__c/fields/E_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Ship_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>E-Ship Date</label>
    <type>Date</type>
</CustomField>