force-app/main/default/objects/Strategy_Memo__c/fields/EEs_Retirees_in_the_Proposal_Medical__c.field-meta.xml
<CustomField>
    <fullName>EEs_Retirees_in_the_Proposal_Medical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EEs &amp; Retirees in the Proposal (Medical)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>