force-app/main/default/objects/Strategy_Memo__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Criteria</label>
    <type>Checkbox</type>
</CustomField>