force-app/main/default/objects/Strategy_Memo__c/fields/Eligible_for_second_Blues_bid__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_second_Blues_bid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for second Blues bid?</label>
    <type>Checkbox</type>
</CustomField>