force-app/main/default/objects/Strategy_Memo__c/fields/Employees_in_the_Proposal_Medical__c.field-meta.xml
<CustomField>
    <fullName>Employees_in_the_Proposal_Medical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employees in the Proposal (Medical)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>