force-app/main/default/objects/Strategy_Memo__c/fields/Enrollment_History__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment History</label>
    <type>Checkbox</type>
</CustomField>