force-app/main/default/objects/Strategy_Memo__c/fields/EPO__c.field-meta.xml
<CustomField>
    <fullName>EPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPO</label>
    <type>Checkbox</type>
</CustomField>