force-app/main/default/objects/Strategy_Memo__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>