force-app/main/default/objects/Strategy_Memo__c/fields/Executive_Summary_Cover_Letter_Due__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary_Cover_Letter_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Summary &amp; Cover Letter Due</label>
    <type>Date</type>
</CustomField>