force-app/main/default/objects/Strategy_Memo__c/fields/External_E_Ship_Recipients__c.field-meta.xml
<CustomField>
    <fullName>External_E_Ship_Recipients__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External E-Ship Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>