force-app/main/default/objects/Strategy_Memo__c/fields/FI_HMOs__c.field-meta.xml
<CustomField>
    <fullName>FI_HMOs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FI (HMOs)</label>
    <type>Checkbox</type>
</CustomField>