force-app/main/default/objects/Strategy_Memo__c/fields/File_Passwords_If_so_please_provide__c.field-meta.xml
<CustomField>
    <fullName>File_Passwords_If_so_please_provide__c</fullName>
    <label>File Passwords? If so, please provide</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>