force-app/main/default/objects/Strategy_Memo__c/fields/Finalist_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalist_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Finalist Date</label>
    <type>Date</type>
</CustomField>