force-app/main/default/objects/Strategy_Memo__c/fields/Financial_Strategy_Lead__c.field-meta.xml
<CustomField>
    <fullName>Financial_Strategy_Lead__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Strategy Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>