force-app/main/default/objects/Strategy_Memo__c/fields/Freestanding_Facility_Report__c.field-meta.xml
<CustomField>
    <fullName>Freestanding_Facility_Report__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Freestanding Facility Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>