force-app/main/default/objects/Strategy_Memo__c/fields/Generational_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Generational_Analysis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Generational Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>