force-app/main/default/objects/Strategy_Memo__c/fields/GEO_TEMPLATES__c.field-meta.xml
<CustomField>
    <fullName>GEO_TEMPLATES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GEO TEMPLATES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>