force-app/main/default/objects/Strategy_Memo__c/fields/GeoAccess_Reports__c.field-meta.xml
<CustomField>
    <fullName>GeoAccess_Reports__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GeoAccess Reports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>