force-app/main/default/objects/Strategy_Memo__c/fields/GEOs_for_Specific_Products__c.field-meta.xml
<CustomField>
    <fullName>GEOs_for_Specific_Products__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GEOs for Specific Products?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>