force-app/main/default/objects/Strategy_Memo__c/fields/Green_Bay_Duluth_Minnetonka__c.field-meta.xml
<CustomField>
    <fullName>Green_Bay_Duluth_Minnetonka__c</fullName>
    <label>Green Bay/Duluth/Minnetonka</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>