force-app/main/default/objects/Strategy_Memo__c/fields/HAI_Analysis_If_data_available__c.field-meta.xml
<CustomField>
    <fullName>HAI_Analysis_If_data_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HAI Analysis (If data available)</label>
    <type>Checkbox</type>
</CustomField>