force-app/main/default/objects/Strategy_Memo__c/fields/Headquarters_City__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Headquarters City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>