force-app/main/default/objects/Strategy_Memo__c/fields/Health_Plan_Manager_Industry__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Manager_Industry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Health Plan Manager Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>