force-app/main/default/objects/Strategy_Memo__c/fields/Implementation_Kick_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Kick_Off_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Kick-Off Date</label>
    <type>Date</type>
</CustomField>