force-app/main/default/objects/Strategy_Memo__c/fields/Implementation_Manager_Traditional__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager_Traditional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Manager Traditional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>