force-app/main/default/objects/Strategy_Memo__c/fields/Implementation_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Timeline</label>
    <type>Checkbox</type>
</CustomField>