force-app/main/default/objects/Strategy_Memo__c/fields/Intent_to_Bid_Due__c.field-meta.xml
<CustomField>
    <fullName>Intent_to_Bid_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intent to Bid Due</label>
    <type>Date</type>
</CustomField>