force-app/main/default/objects/Strategy_Memo__c/fields/Is_the_Client_in_the_Cannabis_Business__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Client_in_the_Cannabis_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the Client in the Cannabis Business</label>
    <type>Checkbox</type>
</CustomField>