force-app/main/default/objects/Strategy_Memo__c/fields/IT_Data_Security__c.field-meta.xml
<CustomField>
    <fullName>IT_Data_Security__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IT Data Security</label>
    <length>255</length>
    <type>Text</type>
</CustomField>