force-app/main/default/objects/Strategy_Memo__c/fields/Key_Dates_Finalist_Award_Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Key_Dates_Finalist_Award_Kickoff__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Dates (Finalist, Award, Kickoff)</label>
    <type>TextArea</type>
</CustomField>