force-app/main/default/objects/Strategy_Memo__c/fields/Key_Risks_to_our_UBV__c.field-meta.xml
<CustomField>
    <fullName>Key_Risks_to_our_UBV__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Risks  to our UBV</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>